k3s/api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: documents-api-nodeport
  namespace: documents
spec:
  type: NodePort
  selector:
    app: documents-api
  ports:
    - name: http
      port: 8141
      targetPort: 8141
      nodePort: 30141
