k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documents-api
  namespace: documents
spec:
  ingressClassName: traefik
  rules:
    - host: documents.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: documents-api
                port:
                  number: 8141
